paginas contato, galeria
criada a página de contato, lista de pets para adoção

--- a/src/assets/pages/galeria/galeria.html
+++ b/src/assets/pages/galeria/galeria.html
@@ -37,17 +37,17 @@
     <main class="pet-gallery">
         <section class="container-fluid pet-template pet-template__ilustracao p-0">
             <div class="row pt-5 mt-5">
-                <div class="col-10 offset-1 mt-3 mb-5 pt-5">
+                <div class="col-8 col-sm-6 offset-1 mt-3 mb-5 pt-5 mx-auto">
                     <h2 class="text-center color-txt-1 fw-normal pet-gallery__title">Olá! Veja os amigos disponíveis para adoção!</h2>
                 </div>
-                <div class="col-10 offset-1 mt-3">
-                    <div class="row">
-                        <article class="col-4 mb-3">
+                <div class="col-10 col-sm-12 col-lg-8 col-xl-10 col-xxl-8 p-0 p-sm-2 mx-auto mt-3">
+                    <div class="row p-sm-3 p-md-0">
+                        <article class="col-12 col-sm-6 col-xl-4 mb-3">
                             <div class="row d-flex">
-                                <div class="col-5 w-50">
+                                <div class="col-4 w-50">
                                     <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/dunga.svg" alt="Foto do cachorro Dunga">
                                 </div>
-                                <div class="col-7 px-2 d-flex flex-column w-50">
+                                <div class="col-8 px-2 d-flex flex-column w-50">
                                     <h3 class="color-txt-1">Dunga</h3>
                                     <p class="pet-gallery__description m-0">2 anos</p>
                                     <p class="pet-gallery__description m-0">Porte pequeno</p>
@@ -60,12 +60,12 @@
                                 </div>
                             </div>
                         </article>
-                        <article class="col-4 mb-3">
+                        <article class="col-sm-6 col-xl-4 mb-3">
                             <div class="row">
-                                <div class="col-5 w-50">
+                                <div class="col-4 w-50">
                                     <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/felicia.svg" alt="Foto do gatinha SheHa">
                                 </div>
-                                <div class="col-7 px-2 d-flex flex-column w-50">
+                                <div class="col-8 px-2 d-flex flex-column w-50">
                                     <h3 class="color-txt-1">SheHa</h3>
                                     <p class="pet-gallery__description m-0">3 meses</p>
                                     <p class="pet-gallery__description m-0">Porte pequeno</p>
@@ -78,12 +78,12 @@
                                 </div>
                             </div>
                         </article>
-                        <article class="col-4 mb-5">
+                        <article class="col-sm-6 col-xl-4 mb-5">
                             <div class="row">
-                                <div class="col-5 w-50">
+                                <div class="col-4 w-50">
                                     <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/sid.svg" alt="Foto do cachorro Sirius">
                                 </div>
-                                <div class="col-7 px-2 d-flex flex-column w-50">
+                                <div class="col-8 px-2 d-flex flex-column w-50">
                                     <h3 class="color-txt-1">Sirius</h3>
                                     <p class="pet-gallery__description m-0">6 meses</p>
                                     <p class="pet-gallery__description m-0">Porte grande</p>
@@ -96,12 +96,12 @@
                                 </div>
                             </div>
                         </article>
-                        <article class="col-4 mb-5">
+                        <article class="col-sm-6 col-xl-4 mb-5">
                             <div class="row">
-                                <div class="col-5 w-50">
+                                <div class="col-4 w-50">
                                     <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/fiona.svg" alt="Foto do cachorrinha Fiona">
                                 </div>
-                                <div class="col-7 px-2 d-flex flex-column w-50">
+                                <div class="col-8 px-2 d-flex flex-column w-50">
                                     <h3 class="color-txt-1">Fiona</h3>
                                     <p class="pet-gallery__description m-0">3 anos</p>
                                     <p class="pet-gallery__description m-0">Porte pequeno</p>
@@ -114,12 +114,12 @@
                                 </div>
                             </div>
                         </article>
-                        <article class="col-4 mb-5">
+                        <article class="col-sm-6 col-xl-4 mb-5">
                             <div class="row">
-                                <div class="col-5 w-50">
+                                <div class="col-4 w-50">
                                     <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/sirius.svg" alt="Cachorrinho Sid">
                                 </div>
-                                <div class="col-7 px-2 d-flex flex-column w-50">
+                                <div class="col-8 px-2 d-flex flex-column w-50">
                                     <h3 class="color-txt-1">Sid</h3>
                                     <p class="pet-gallery__description m-0">8 meses</p>
                                     <p class="pet-gallery__description m-0">Porte médio/grande</p>
@@ -132,12 +132,12 @@
                                 </div>
                             </div>
                         </article>
-                        <article class="col-4 mb-5">
+                        <article class="col-sm-6 col-xl-4 mb-5">
                             <div class="row">
-                                <div class="col-5 w-50">
+                                <div class="col-4 w-50">
                                     <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/Yoda.svg" alt="A força está com Gato Yoda">
                                 </div>
-                                <div class="col-7 px-2 d-flex flex-column w-50">
+                                <div class="col-8 px-2 d-flex flex-column w-50">
                                     <h3 class="color-txt-1">Yoda</h3>
                                     <p class="pet-gallery__description m-0">1 ano</p>
                                     <p class="pet-gallery__description m-0">Porte médio</p>
@@ -150,12 +150,12 @@
                                 </div>
                             </div>
                         </article>
-                        <article class="col-4 mb-5">
+                        <article class="col-sm-6 col-xl-4 mb-5">
                             <div class="row">
-                                <div class="col-5 w-50">
+                                <div class="col-4 w-50">
                                     <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/Lua.svg" alt="Gatinha Lua">
                                 </div>
-                                <div class="col-7 px-2 d-flex flex-column w-50">
+                                <div class="col-8 px-2 d-flex flex-column w-50">
                                     <h3 class="color-txt-1">Lua</h3>
                                     <p class="pet-gallery__description m-0">6 meses</p>
                                     <p class="pet-gallery__description m-0">Porte médio</p>
@@ -168,12 +168,12 @@
                                 </div>
                             </div>
                         </article>
-                        <article class="col-4 mb-5">
+                        <article class="col-sm-6 col-xl-4 mb-5">
                             <div class="row">
-                                <div class="col-5 w-50">
+                                <div class="col-4 w-50">
                                     <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/Amora.svg" alt="Cahorrinha fofinha Amorinha">
                                 </div>
-                                <div class="col-7 px-2 d-flex flex-column w-50">
+                                <div class="col-8 px-2 d-flex flex-column w-50">
                                     <h3 class="color-txt-1">Amorinha</h3>
                                     <p class="pet-gallery__description m-0">45 dias</p>
                                     <p class="pet-gallery__description m-0">Porte grande</p>
@@ -186,12 +186,12 @@
                                 </div>
                             </div>
                         </article>
-                        <article class="col-4 mb-5">
+                        <article class="col-sm-6 col-xl-4 mb-5">
                             <div class="row">
-                                <div class="col-5 w-50">
+                                <div class="col-4 w-50">
                                     <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/elda.svg" alt="Elza a gata princesa">
                                 </div>
-                                <div class="col-7 px-2 d-flex flex-column w-50">
+                                <div class="col-8 px-2 d-flex flex-column w-50">
                                     <h3 class="color-txt-1">Elza</h3>
                                     <p class="pet-gallery__description m-0">5 meses</p>
                                     <p class="pet-gallery__description m-0">Porte médio</p>
