--- a/src/assets/pages/cadastro/cadastro.html
+++ b/src/assets/pages/cadastro/cadastro.html
@@ -21,8 +21,8 @@
         <div class="row justify-content-sm-start align-items-center p-1 offset-sm-1 offset-lg-1 mx-xl-5">
             <a class="pet-header__link d-none d-none d-sm-block px-3" href="/src/assets/pages/index.html"><img
                     src="../../imgs/Logo.svg" class="pet-header__img-header d-block" alt="Logo Adopet"></a>
-            <a class="pet-header__link px-4" href="#"><img src="../../imgs/casa.png" class="pet-header__img-header d-block"
-                    alt="Ícone casinha"></a>
+            <a class="pet-header__link px-4" href="#"><img src="../../imgs/casa.png"
+                    class="pet-header__img-header d-block" alt="Ícone casinha"></a>
             <a class="pet-header__link  px-4" href="#"><img src="../../imgs/mensagens.png"
                     class="pet-header__img-header d-block" alt="Ícone mensagens"></a>
         </div>
@@ -32,40 +32,53 @@
         <section class="pet-template__figure h-100">
             <div class="container">
                 <div class="row">
-                    <div class="mt-5 offset-1 col-11 pt-md-5 pt-xl-1">
+                    <div class="mt-5 mx-auto col-11 pt-md-5 pt-xl-1">
                         <div class="text-center mt-5 pt-5 pt-md-0 col-md-8 mx-auto">
-                            <img class="mt-5 pet-template__logo" src="/src/assets/imgs/Logo_-_azul.svg" alt="Logo Adotpet">
-                            <p class="my-4 color-txt-1 fs-6">Ainda não tem cadastro? <br> Então, antes de buscar seu melhor
+                            <img class="mt-5 pet-template__logo" src="/src/assets/imgs/Logo_-_azul.svg"
+                                alt="Logo Adotpet">
+                            <p class="my-4 color-txt-1 fs-6">Ainda não tem cadastro? <br> Então, antes de buscar seu
+                                melhor
                                 amigo, precisamos de alguns dados:</p>
                         </div>
 
-                        <form class="pet-form col-md-6 col-xl-5 mx-auto text-center">
-                            <fieldset class="mb-4">
+                        <!-- Mensagem de erro senhas não são idênticas -->
+                        <div id="conferirSenhas" class="col-12 text-center">
+                        </div>
+
+                        <form name="cadastro" class="pet-form col-md-6 col-xl-5 mx-auto text-center">
+                            <fieldset class="mb-4 col-md-12 col-xl-9 mx-auto">
                                 <label for="input-nome" class="form-label pet-form__label">Nome</label>
-                                <input type="text" class="form-control pet-form__input text-center" id="input-nome"
-                                    placeholder="Digite seu nome completo">
+                                <input type="text" name="cadnome" class="form-control pet-form__input text-center"
+                                    id="input-nome" placeholder="Digite seu nome completo"
+                                    pattern="^[A-Za-záàâãéèêíïóôõöúçñÁÀÂÃÉÈÍÏÓÔÕÖÚÇÑ\s]+$" minlength="3" required>
+                                <span class="erro-mensagem col-12 mx-auto"></span>
                             </fieldset>
-                            <fieldset class="mb-4">
+                            <fieldset class="mb-4 col-md-12 col-xl-9 mx-auto">
                                 <label for="input-email" class="form-label pet-form__label">Email</label>
-                                <input type="email" class="form-control pet-form__input text-center" id="input-email"
-                                    placeholder="Digite seu melhor email">
+                                <input type="email" name="cademail" class="form-control pet-form__input text-center"
+                                    id="input-email" placeholder="Digite seu melhor email" required>
+                                <span class="erro-mensagem col-12 mx-auto"></span>
                             </fieldset>
                             <fieldset class="mb-4 col-md-12 col-xl-9 mx-auto">
                                 <label for="input-password" class="form-label pet-form__label">Senha</label>
                                 <div class="d-flex position-relative align-items-center">
-                                    <input type="password" class="form-control pet-form__input text-center"
-                                        id="input-password" placeholder="Crie uma senha">
-                                    <i class="bi bi-eye-slash-fill position-absolute"></i>
+                                    <input type="password" name="cadsenha" 
+                                        class="form-control pet-form__input text-center" id="input-password"
+                                        placeholder="Crie uma senha" pattern="^[0-9A-zÇç]{8,12}$" minlength="8"
+                                        maxlength="12" required inputSenha>
+                                    <i passShow class="bi bi-eye-slash-fill position-absolute"></i>
+                                    <span class="erro-mensagem col-12 mx-auto"></span>
                                 </div>
                             </fieldset>
 
                             <fieldset class="mb-4 col-md-12 col-xl-9 mx-auto">
-                                <label for="input-password" class="form-label pet-form__label">Confirma sua
+                                <label for="input-Confirmpassword" class="form-label pet-form__label">Confirma sua
                                     senha</label>
                                 <div class="d-flex position-relative align-items-center">
                                     <input type="password" class="form-control pet-form__input text-center"
-                                        id="input-password" placeholder="Repita a senha criada">
-                                    <i class="bi bi-eye-slash-fill position-absolute"></i>
+                                        id="input-Confirmpassword" placeholder="Repita a senha criada" minlength="8"
+                                        maxlength="12" name="cadconfirmsenha" required inputSenha>
+                                    <i passShow class="bi bi-eye-slash-fill position-absolute"></i>
                                 </div>
                             </fieldset>
 
@@ -91,6 +104,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+
+    <script src="../../js/cadastroUsuario.js"></script>
 </body>
 
 </html>
