--- a/src/assets/pages/galeria/galeria.html
+++ b/src/assets/pages/galeria/galeria.html
@@ -41,169 +41,8 @@
                     <h2 class="text-center color-txt-1 fw-normal pet-gallery__title">Olá! Veja os amigos disponíveis para adoção!</h2>
                 </div>
                 <div class="col-10 col-sm-12 col-lg-8 col-xl-10 col-xxl-8 p-0 p-sm-2 mx-auto mt-3">
-                    <div class="row p-sm-3 p-md-0">
-                        <article class="col-12 col-sm-6 col-xl-4 mb-3">
-                            <div class="row d-flex">
-                                <div class="col-4 w-50">
-                                    <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/dunga.svg" alt="Foto do cachorro Dunga">
-                                </div>
-                                <div class="col-8 px-2 d-flex flex-column w-50">
-                                    <h3 class="color-txt-1">Dunga</h3>
-                                    <p class="pet-gallery__description m-0">2 anos</p>
-                                    <p class="pet-gallery__description m-0">Porte pequeno</p>
-                                    <p class="pet-gallery__description m-0">Calmo e educado</p>
-
-                                    <div class="pet-gallery__contact mt-3">
-                                        <p class="pet-gallery__regional m-0 m-0">Rio de Janeiro (RJ)</p>
-                                        <a class="pet-gallery__link m-0 mt-1" href="#">Falar com responsável</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="col-sm-6 col-xl-4 mb-3">
-                            <div class="row">
-                                <div class="col-4 w-50">
-                                    <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/felicia.svg" alt="Foto do gatinha SheHa">
-                                </div>
-                                <div class="col-8 px-2 d-flex flex-column w-50">
-                                    <h3 class="color-txt-1">SheHa</h3>
-                                    <p class="pet-gallery__description m-0">3 meses</p>
-                                    <p class="pet-gallery__description m-0">Porte pequeno</p>
-                                    <p class="pet-gallery__description m-0">Ativa e carinhosa</p>
-
-                                    <div class="pet-gallery__contact mt-3">
-                                        <p class="pet-gallery__regional m-0">Eternia (ET)</p>
-                                        <a class="pet-gallery__link m-0 mt-1" href="#">Falar com responsável</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="col-sm-6 col-xl-4 mb-5">
-                            <div class="row">
-                                <div class="col-4 w-50">
-                                    <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/sid.svg" alt="Foto do cachorro Sirius">
-                                </div>
-                                <div class="col-8 px-2 d-flex flex-column w-50">
-                                    <h3 class="color-txt-1">Sirius</h3>
-                                    <p class="pet-gallery__description m-0">6 meses</p>
-                                    <p class="pet-gallery__description m-0">Porte grande</p>
-                                    <p class="pet-gallery__description m-0">Ativo e educado</p>
-
-                                    <div class="pet-gallery__contact mt-3">
-                                        <p class="pet-gallery__regional m-0">Duque de Caxias (RJ)</p>
-                                        <a class="pet-gallery__link m-0 mt-1" href="#">Falar com responsável</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="col-sm-6 col-xl-4 mb-5">
-                            <div class="row">
-                                <div class="col-4 w-50">
-                                    <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/fiona.svg" alt="Foto do cachorrinha Fiona">
-                                </div>
-                                <div class="col-8 px-2 d-flex flex-column w-50">
-                                    <h3 class="color-txt-1">Fiona</h3>
-                                    <p class="pet-gallery__description m-0">3 anos</p>
-                                    <p class="pet-gallery__description m-0">Porte pequeno</p>
-                                    <p class="pet-gallery__description m-0">Calma e carinhosa</p>
-
-                                    <div class="pet-gallery__contact mt-3">
-                                        <p class="pet-gallery__regional m-0">Florianópolis (SC)</p>
-                                        <a class="pet-gallery__link m-0 mt-1" href="#">Falar com responsável</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="col-sm-6 col-xl-4 mb-5">
-                            <div class="row">
-                                <div class="col-4 w-50">
-                                    <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/sirius.svg" alt="Cachorrinho Sid">
-                                </div>
-                                <div class="col-8 px-2 d-flex flex-column w-50">
-                                    <h3 class="color-txt-1">Sid</h3>
-                                    <p class="pet-gallery__description m-0">8 meses</p>
-                                    <p class="pet-gallery__description m-0">Porte médio/grande</p>
-                                    <p class="pet-gallery__description m-0">Brincalhão e amável</p>
-
-                                    <div class="pet-gallery__contact mt-3">
-                                        <p class="pet-gallery__regional m-0">São José (SC)</p>
-                                        <a class="pet-gallery__link m-0 mt-1" href="#">Falar com responsável</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="col-sm-6 col-xl-4 mb-5">
-                            <div class="row">
-                                <div class="col-4 w-50">
-                                    <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/Yoda.svg" alt="A força está com Gato Yoda">
-                                </div>
-                                <div class="col-8 px-2 d-flex flex-column w-50">
-                                    <h3 class="color-txt-1">Yoda</h3>
-                                    <p class="pet-gallery__description m-0">1 ano</p>
-                                    <p class="pet-gallery__description m-0">Porte médio</p>
-                                    <p class="pet-gallery__description m-0">Hiperativo e brincalhão</p>
-
-                                    <div class="pet-gallery__contact mt-3">
-                                        <p class="pet-gallery__regional m-0">Florianópolis (SC)</p>
-                                        <a class="pet-gallery__link m-0 mt-1" href="#">Falar com responsável</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="col-sm-6 col-xl-4 mb-5">
-                            <div class="row">
-                                <div class="col-4 w-50">
-                                    <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/Lua.svg" alt="Gatinha Lua">
-                                </div>
-                                <div class="col-8 px-2 d-flex flex-column w-50">
-                                    <h3 class="color-txt-1">Lua</h3>
-                                    <p class="pet-gallery__description m-0">6 meses</p>
-                                    <p class="pet-gallery__description m-0">Porte médio</p>
-                                    <p class="pet-gallery__description m-0">Ativa e carinhosa</p>
-
-                                    <div class="pet-gallery__contact mt-3">
-                                        <p class="pet-gallery__regional m-0">Joinville (SC)</p>
-                                        <a class="pet-gallery__link m-0 mt-1" href="#">Falar com responsável</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="col-sm-6 col-xl-4 mb-5">
-                            <div class="row">
-                                <div class="col-4 w-50">
-                                    <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/Amora.svg" alt="Cahorrinha fofinha Amorinha">
-                                </div>
-                                <div class="col-8 px-2 d-flex flex-column w-50">
-                                    <h3 class="color-txt-1">Amorinha</h3>
-                                    <p class="pet-gallery__description m-0">45 dias</p>
-                                    <p class="pet-gallery__description m-0">Porte grande</p>
-                                    <p class="pet-gallery__description m-0">Calma e carinhosa</p>
-
-                                    <div class="pet-gallery__contact mt-3">
-                                        <p class="pet-gallery__regional m-0">Brusque (SC)</p>
-                                        <a class="pet-gallery__link m-0 mt-1" href="#">Falar com responsável</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="col-sm-6 col-xl-4 mb-5">
-                            <div class="row">
-                                <div class="col-4 w-50">
-                                    <img class="pet-gallery__pet-image" src="../../imgs/colletion-gallery/elda.svg" alt="Elza a gata princesa">
-                                </div>
-                                <div class="col-8 px-2 d-flex flex-column w-50">
-                                    <h3 class="color-txt-1">Elza</h3>
-                                    <p class="pet-gallery__description m-0">5 meses</p>
-                                    <p class="pet-gallery__description m-0">Porte médio</p>
-                                    <p class="pet-gallery__description m-0">Ativa e amável</p>
-
-                                    <div class="pet-gallery__contact mt-3">
-                                        <p class="pet-gallery__regional m-0">Brusque (SC)</p>
-                                        <a class="pet-gallery__link m-0 mt-1" href="#">Falar com responsável</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
+                    <div class="row p-sm-3 p-md-0" id="list-petz">
+                      
                     </div>
                 </div>
             </div>
@@ -223,6 +62,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+
+    <script src="/src/assets/js/galleryColletion.js"></script>
 </body>
 
 </html>
