--- a/src/assets/pages/perfil/perfil.html
+++ b/src/assets/pages/perfil/perfil.html
@@ -39,7 +39,9 @@
     <main class="pet-profile pet-color-bg-custom">
         <section class="container-fluid pet-profile__section p-0">
             <div class="pet-container">
-                <h1 class="color-txt-1 text-center fw-normal col-10 col-sm-8 col-lg-7 col-xl-4 mx-auto pet-profile__title">Esse é o perfil que
+                <h1
+                    class="color-txt-1 text-center fw-normal col-10 col-sm-8 col-lg-7 col-xl-4 mx-auto pet-profile__title">
+                    Esse é o perfil que
                     aparece para responsáveis ou ONGs que recebem sua mensagem.</h1>
                 <form action="" class="pet-profile__form col-10 col-sm-8 col-lg-10 col-xl-4 mx-auto">
                     <h2 class="pet-profile__subtitle text-center col-12 mx-auto pt-5 pb-3">Perfil</h2>
@@ -79,7 +81,8 @@
                         <textarea class="form-control pet-profile__textarea" id="textarea-mensagem-contato" rows="3"
                             placeholder="Conter mais sobre você."></textarea>
                     </fieldset>
-                    <button type="submit" class="btn color-bg-button color-txt mt-4 col-6 d-block mx-auto">Salvar</button>
+                    <button type="submit"
+                        class="btn color-bg-button color-txt mt-4 col-6 d-block mx-auto">Salvar</button>
                 </form>
             </div>
         </section>
@@ -98,6 +101,34 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+
+    <script>
+        let photo = document.getElementById('alterar-img')
+        let file = document.getElementById('input-nome-foto')
+        const userProfile = document.getElementById('profile-img')
+        const photoProfile = document.getElementById('img-profile')
+
+
+        photo.addEventListener('click', () => {
+            file.click();
+        });
+
+        file.addEventListener('change', () => {
+
+            if (file.files.length <= 0) {
+                return;
+            }
+
+            let reader = new FileReader();
+
+            reader.onload = () => {
+                photoProfile.src = reader.result
+                userProfile.src = reader.result
+            }
+
+            reader.readAsDataURL(file.files[0]);
+        });
+    </script>
 
 </body>
 
