--- a/src/assets/pages/index.html
+++ b/src/assets/pages/index.html
@@ -36,8 +36,8 @@
 
             <div class="container col-8 col-md-6 col-xl-3 mt-sm-4">
                 <div class="row d-flex flex-column g-2 mx-auto">
-                    <button class="btn btn-primary color-bg-button" type="submit">Já tenho conta</button>
-                    <button class="btn btn-primary color-bg-button" type="submit">Quero me cadastrar</button>
+                    <a class="btn btn-primary color-bg-button" href="/src/assets/pages/login/login.html">Já tenho conta</a>
+                    <a class="btn btn-primary color-bg-button" href="/src/assets/pages/cadastro/cadastro.html">Quero me cadastrar</a>
                 </div>
             </div>
         </section>
