--- a/src/assets/pages/login/login.html
+++ b/src/assets/pages/login/login.html
@@ -28,39 +28,46 @@
         </div>
     </header>
 
-    <main class="pet-login pet-template pet-template__ilustracao pet-color-bg-custom">
+    <main class="pet-login pet-template pet-template__ilustracao pet-color-bg-custom" style="height: 100vh;">
         <section class="pet-template__figure h-100">
             <div class="container">
                 <div class="row">
-                    <div class="mt-5 offset-1 col-11 pt-md-5 pt-xl-1">
+                    <div class="mt-5 col-12 pt-md-5 pt-xl-1 mx-auto">
                         <div class="text-center mt-5  mt-lg-4 pt-5 pt-md-0 col-md-8 mx-auto">
                             <img class="mt-5 pet-template__logo" src="/src/assets/imgs/Logo_-_azul.svg"
                                 alt="Logo Adotpet">
                             <p class="my-4 color-txt-1 mt-lg-5 pet-login__subtitle">Já tem conta? Faça seu login:</p>
                         </div>
 
-                        <form class="pet-form col-md-6 col-xl-5 mt-lg-5 mx-auto text-center">
+                        <div id="mensagem" class="col-11 col-md-6 col-lg-5 col-xxl-4 text-center">
+   
+                        </div>
+
+                        <form class="pet-form col-md-6 col-xl-5 mt-lg-5 mx-auto text-center" name="login">
                             <fieldset class="mb-4">
                                 <label for="input-email" class="form-label pet-form__label mb-lg-2">Email</label>
-                                <input type="email" class="form-control pet-form__input text-center" id="input-email"
-                                    placeholder="Digite seu email">
+                                <input type="email" name="cademail" class="form-control pet-form__input text-center"
+                                    id="input-email" placeholder="Digite seu email" >
+                                <span class="erro-mensagem col-12 mx-auto"></span>
                             </fieldset>
-                            
-                            <fieldset class="mb-4 col-md-12 col-xl-9 mx-auto">
+
+                            <fieldset class="mb-4 pb-2 col-md-12 col-xl-9 mx-auto">
                                 <label for="input-password" class="form-label pet-form__label mb-lg-2">Senha</label>
                                 <div class="d-flex position-relative align-items-center">
-                                    <input type="password" class="form-control pet-form__input text-center"
-                                        id="input-password" placeholder="Digite sua senha">
+                                    <input type="password" name="cadsenha"
+                                        class="form-control pet-form__input text-center" id="input-password"
+                                        placeholder="Digite sua senha" >
                                     <i class="bi bi-eye-slash-fill position-absolute"></i>
+                                    <span class="erro-mensagem col-12 mx-auto"></span>
                                 </div>
                             </fieldset>
 
                             <a href="#" class="pet-login__forgot-link">
-                                <p class="pet-login__forgot-text color-txt-2">Esqueci minha senha.</p>
+                                <p class="pet-login__forgot-text color-txt-2 m-0">Esqueci minha senha.</p>
                             </a>
 
                             <button type="submit"
-                                class="btn color-bg-button color-txt col-7 col-md-5 col-xl-4">Entrar</button>
+                                class="btn color-bg-button color-txt my-3 col-7 col-md-5 col-xl-4">Entrar</button>
                         </form>
                     </div>
                 </div>
@@ -81,6 +88,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+
+    <script src="/src/assets/js/cadastroUsuario.js"></script>
+    <script src="/src/assets/js/mostrarSenha.js"></script>
+    <script src="/src/assets/js/login.js"></script>
 </body>
 
 </html>
