--- a/src/assets/pages/perfil/perfil.html
+++ b/src/assets/pages/perfil/perfil.html
@@ -43,6 +43,11 @@
                     class="color-txt-1 text-center fw-normal col-10 col-sm-8 col-lg-7 col-xl-4 mx-auto pet-profile__title">
                     Esse é o perfil que
                     aparece para responsáveis ou ONGs que recebem sua mensagem.</h1>
+
+                <!-- Testando Log -->
+                <h3 id="logado"></h3>
+
+
                 <form action="" class="pet-profile__form col-10 col-sm-8 col-lg-10 col-xl-4 mx-auto">
                     <h2 class="pet-profile__subtitle text-center col-12 mx-auto pt-5 pb-3">Perfil</h2>
                     <fieldset class="mb-3 pet-profile__control">
@@ -83,9 +88,11 @@
                     </fieldset>
                     <button type="submit"
                         class="btn color-bg-button color-txt mt-4 col-6 d-block mx-auto">Salvar</button>
+                    <button type="submit" id="logout" class="btn btn-primary col-12">Sair</button>
                 </form>
             </div>
         </section>
+
     </main>
 
     <footer class="pet-footer d-flex align-items-center justify-content-center container-fluid">
@@ -129,6 +136,8 @@
             reader.readAsDataURL(file.files[0]);
         });
     </script>
+
+    <script src="../../js/logout.js"></script>
 
 </body>
 
